style fix: horizontal scrolling in the code editor didn't work

--- a/packages/plugin-packages/mashroom-portal-admin-app/src/sass/components/_PageConfigureDialog.scss
+++ b/packages/plugin-packages/mashroom-portal-admin-app/src/sass/components/_PageConfigureDialog.scss
@@ -8,6 +8,10 @@
         }
     }
 
+    .mashroom-portal-ui-source-code-editor-field {
+        display: block;
+    }
+
     .mashroom-portal-ui-checkbox-field {
         margin-left: 120px;
     }
